strucure and understanding of htmx

--- a/cmd/web/assets/css/output.css
+++ b/cmd/web/assets/css/output.css
@@ -600,6 +600,10 @@ video {
   border-bottom-width: 1px;
 }
 
+.border-b-4 {
+  border-bottom-width: 4px;
+}
+
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
