--- a/cmd/web/users.templ
+++ b/cmd/web/users.templ
@@ -1,32 +1,26 @@
 package web
 
-import "book_it/pkg/services"
+import "github.com/FilipBudzynski/book_it/pkg/entities"
 
-templ UserForm(users []services.User) {
-	@Base() {
-		<form hx-post="/create" method="POST" hx-target="#users-container" hx-swap="beforeend">
-			<input
-				class="bg-gray-200 text-black p-2 border border-gray-400 rounded-lg"
-				id="username"
-				name="username"
-				type="text"
-			/>
-			<input class="bg-gray-200 text-black p-2 border border-gray-400 rounded-lg" id="email" name="email" type="text"/>
-			<button type="submit" class="bg-orange-500 hover:bg-orange-700 text-white py-2 px-4 rounded">Submit</button>
-		</form>
-		<ul
-			id="users-container"
-			class="w-48 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white"
-		>
-			for _, user := range users {
-				<li class="w-full px-4 py-2 border-b border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Username }</li>
-				<li class="w-full px-4 py-2 border-b-4 border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Email }</li>
-			}
-		</ul>
-	}
+templ UserForm(users []entities.User) {
+@Base() {
+<form hx-post="/users/create" method="POST" hx-target="#users-container" hx-swap="beforeend">
+    <input class="bg-gray-200 text-black p-2 border border-gray-400 rounded-lg" id="username" name="username"
+        type="text" />
+    <input class="bg-gray-200 text-black p-2 border border-gray-400 rounded-lg" id="email" name="email" type="text" />
+    <button type="submit" class="bg-orange-500 hover:bg-orange-700 text-white py-2 px-4 rounded">Submit</button>
+</form>
+<ul id="users-container"
+    class="w-48 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg dark:bg-gray-700 dark:border-gray-600 dark:text-white">
+    for _, user := range users {
+    <li class="w-full px-4 py-2 border-b border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Username }</li>
+    <li class="w-full px-4 py-2 border-b-4 border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Email }</li>
+    }
+</ul>
+}
 }
 
-templ AppendUsersList(user services.User) {
-	<li class="w-full px-4 py-2 border-b border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Username }</li>
-	<li class="w-full px-4 py-2 border-b-4 border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Email }</li>
+templ AppendUsersList(user entities.User) {
+<li class="w-full px-4 py-2 border-b border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Username }</li>
+<li class="w-full px-4 py-2 border-b-4 border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Email }</li>
 }
