--- a/cmd/web/users.templ
+++ b/cmd/web/users.templ
@@ -1,8 +1,8 @@
 package web
 
-import "github.com/FilipBudzynski/book_it/pkg/entities"
+import "github.com/FilipBudzynski/book_it/pkg/models"
 
-templ UserForm(users []entities.User) {
+templ UserForm(users []models.User) {
 @Base() {
 <form hx-post="/users/create" method="POST" hx-target="#users-container" hx-swap="beforeend">
     <input class="bg-gray-200 text-black p-2 border border-gray-400 rounded-lg" id="username" name="username"
@@ -20,7 +20,7 @@ templ UserForm(users []entities.User) {
 }
 }
 
-templ AppendUsersList(user entities.User) {
+templ AppendUsersList(user models.User) {
 <li class="w-full px-4 py-2 border-b border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Username }</li>
 <li class="w-full px-4 py-2 border-b-4 border-gray-200 rounded-t-lg dark:border-gray-600">{ user.Email }</li>
 }
