gracefully handle user cancle authentication

--- a/cmd/web/loginPage.templ
+++ b/cmd/web/loginPage.templ
@@ -1,7 +1,7 @@
 package web
 
 templ SignInButton() {
-<a href="/auth/google" type="button" aria-label="Continue with Google"
+<a href="/auth/?provider=google" type="button" aria-label="Continue with Google"
     class="w-full flex items-center justify-center bg-white border border-button-border-light rounded-md p-0.5 pr-3 gap-x-2">
     <div class="flex items-center justify-center bg-white w-9 h-9 rounded-l">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-5 h-5">
