--- a/cmd/web/SignOutButton.templ
+++ b/cmd/web/SignOutButton.templ
@@ -2,7 +2,7 @@ package web
 
 templ SignOutButton() {
 <a href="/auth/logout?provider=google" type="button"
-    class="w-full flex items-center justify-center bg-white border border-button-border-light rounded-md p-0.5 pr-3 gap-x-2">
+    class="w-full h-8 flex items-center justify-center bg-white border border-button-border-light rounded-md p-0.5 pr-3 gap-x-2">
     <span class="text-sm text-google-text-gray tracking-wider text-center">Sign Out</span>
 </a>
 }
