--- a/cmd/web/home.templ
+++ b/cmd/web/home.templ
@@ -1,14 +1,17 @@
 package web
 
-templ HomePage(loggedIn bool) {
-    @Base() {
-        <div class="px-6 sm:px-0 max-w-sm flex flex-col justify-center items-center">
-            <span class="text-sm text-center text-google-text-gray tracking-wider">Track Progress & Discover</span>
-            if loggedIn {
-                @SignOutButton()
-            } else {
-                @SignInButton()
-            }
-        </div>
-    }
+import "github.com/FilipBudzynski/book_it/pkg/models"
+
+templ HomePage(user *models.User) {
+	@Base() {
+		<div class="px-6 sm:px-0 max-w-sm flex flex-col justify-center items-center" hx-target>
+			if user != nil {
+				<span class="text-m text-center text-google-text-gray tracking-wider">{ user.Username }</span>
+				@SignOutButton()
+			} else {
+				<span class="text-sm text-center text-google-text-gray tracking-wider">Track Progress & Discover</span>
+				@SignInButton()
+			}
+		</div>
+	}
 }
