--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -1,18 +1,25 @@
 package web
 
 templ Base() {
-	<!DOCTYPE html>
-	<html lang="en" class="h-screen">
-		<head>
-			<meta charset="utf-8"/>
-			<title>Book It</title>
-			<link href="assets/css/output.css" rel="stylesheet"/>
-			<script src="assets/js/htmx.min.js"></script>
-		</head>
-		<body class="bg-gray-100">
-			<main class="max-w-sm mx-auto p-4">
-				{ children... }
-			</main>
-		</body>
-	</html>
+<!DOCTYPE html>
+<html lang="en" class="h-screen">
+
+<head>
+    <meta charset="utf-8" />
+    <title>Book It</title>
+    <link href="assets/css/output.css" rel="stylesheet" />
+    <script src="assets/js/htmx.min.js"></script>
+
+    // tailwind flowbite
+    <script src="https://unpkg.com/htmx.org@1.7.0"></script>
+    <link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet" />
+</head>
+
+<body class="bg-gray-100">
+    <main class="max-w-4xl mx-auto p-4">
+        { children... }
+    </main>
+</body>
+
+</html>
 }
