--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -12,6 +12,7 @@ templ Base() {
 
     // tailwind flowbite
     <script src="https://unpkg.com/htmx.org@1.7.0"></script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.13"></script>
     <link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet" />
 </head>
 
