--- a/cmd/web/user_books/list.templ
+++ b/cmd/web/user_books/list.templ
@@ -1,6 +1,7 @@
 package web_user_books
 
 import (
+	"fmt"
 	"github.com/FilipBudzynski/book_it/pkg/schemas"
 	"github.com/FilipBudzynski/book_it/cmd/web"
 )
@@ -13,7 +14,7 @@ templ List(books []schemas.Book) {
 			<div id="book-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 				<!-- Example book -->
 				for _, book := range books {
-					<div class="bg-white shadow rounded-lg p-6 flex flex-col">
+					<div name="book-container" class="bg-white shadow rounded-lg p-6 flex flex-col">
 						<h2 class="text-xl font-semibold mb-2">{ book.Title }</h2>
 						<p class="text-gray-600 mb-4">
 							for _, author := range book.Authors {
@@ -27,6 +28,14 @@ templ List(books []schemas.Book) {
 							hx-swap="innerHTML"
 						>
 							View Details
+						</button>
+						<button
+							style="transition: all 800ms ease-in"
+							_="on click remove closest parent <div/>"
+							class="mt-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
+							hx-delete={ fmt.Sprintf("/user-books/%s", book.ID) }
+						>
+							Remove
 						</button>
 					</div>
 				}
