--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -7,8 +7,9 @@ import (
 )
 
 templ BooksSearch() {
+	@web.Navbar()
 	@web.Base() {
-		<div class="justify-items-center">
+		<div class="pt-12 justify-items-center">
 			<form class="pb-3 max-w-md mx-auto" hx-post="/books" method="POST" hx-target="#books-container">
 				<label
 					for="default-search"
@@ -36,58 +37,56 @@ templ BooksSearch() {
 						type="search"
 						id="book-title"
 						name="book-title"
-						class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+						class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500"
 						placeholder="Search Mockups, Logos..."
 						required
 					/>
 					<button
 						type="submit"
-						class="text-white absolute end-2.5 bottom-2.5 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+						class="text-white absolute end-2.5 bottom-2.5 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
 					>Search</button>
 				</div>
 			</form>
-			<div id="books-container" class="grid grid-cols-1 justify-items-center gap-4 w-full"></div>
+			@BooksTable()
 		</div>
 	}
 }
 
 templ BooksPost(books []schemas.Book) {
-	<div id="book-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-		for _, book := range books {
-			<div class="bg-white shadow rounded-lg p-6 flex flex-col">
-				<img src={ book.ImageLink } alt={ book.Title } class="mb-4 w-full h-64 object-cover rounded-md shadow-sm"/>
-				<h2 class="text-xl font-semibold mb-2">{ book.Title }</h2>
-				<p class="text-gray-600 mb-4">
-					By 
-					for _, author := range book.Authors {
-						{ author }, 
-					}
-				</p>
-				<p class="text-sm text-gray-500">{ book.Description }</p>
-				<div class="flex space-x-2 mt-auto">
-					<button
-						class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"
-						hx-get="/book/{{.ID}}"
-						hx-target="#book-details"
-						hx-swap="innerHTML"
-					>
-						View Details
-					</button>
-					<button
-						class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600"
-						hx-post={ fmt.Sprintf("/user-books/%s", book.ID) }
-						hx-swap="none"
-					>
-						Add to My Books
-					</button>
-					<input type="hidden" name="book-id" value={ book.ID }/>
+	for _, book := range books {
+		<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+			<td class="w-2/12 px-3 py-2">
+				<img src={ book.ImageLink } alt="img" class="w-auto h-32 object-cover shadow-sm"/>
+			</td>
+			<td class="w-max px-3 py-2">
+				<div class="flex flex-col">
+					<span class="text-base">
+						<a href="" class="transition ease-in-out delay-150 hover:text-black">{ book.Title } </a>
+					</span>
+					<span class="text-sm text-gray-300">
+						by 
+						for _, author := range book.Authors {
+							{ author }
+						}
+					</span>
 				</div>
-			</div>
-		}
-	</div>
-	<!-- Book Details -->
-	<div id="book-details" class="mt-8 bg-gray-50 p-4 rounded shadow hidden">
-		<h2 class="text-2xl font-bold">Book Details</h2>
-		<div hx-target="this" hx-swap="innerHTML"></div>
+			</td>
+			<td class="w-1/5 px-3 py-2">
+				<button
+					hx-post={ fmt.Sprintf("/user-books/%s", book.ID) }
+					hx-swap="none"
+					class="font-medium text-green-600 dark:text-red-500 transition ease-in-out delay-150 hover:scale-110"
+				>Want to read</button>
+			</td>
+		</tr>
+	}
+}
+
+templ BooksTable() {
+	<div class="w-11/12 overflow-x-auto shadow-md sm:rounded-lg">
+		<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"></thead>
+			<tbody id="books-container"></tbody>
+		</table>
 	</div>
 }
