--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -1,9 +1,10 @@
 package web_books
 
 import (
-	"fmt"
 	"github.com/FilipBudzynski/book_it/cmd/web"
 	"github.com/FilipBudzynski/book_it/pkg/schemas"
+	"github.com/FilipBudzynski/book_it/pkg/models"
+	"github.com/FilipBudzynski/book_it/utils"
 )
 
 templ BooksSearch() {
@@ -52,7 +53,7 @@ templ BooksSearch() {
 	}
 }
 
-templ BooksPost(books []schemas.Book) {
+templ BooksPost(books []schemas.Book, userBooks []models.UserBook) {
 	for _, book := range books {
 		<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
 			<td class="w-2/12 px-3 py-2">
@@ -72,11 +73,12 @@ templ BooksPost(books []schemas.Book) {
 				</div>
 			</td>
 			<td class="w-1/5 px-3 py-2">
-				<button
-					hx-post={ fmt.Sprintf("/user-books/%s", book.ID) }
-					hx-swap="none"
-					class="font-medium text-green-600 dark:text-red-500 transition ease-in-out delay-150 hover:scale-110"
-				>Want to read</button>
+				@Button(book.ID, utils.BookInUserBooks(book.ID, userBooks))
+				<!-- if !utils.BookInUserBooks(book.ID, userBooks) { -->
+				<!-- 	@CreateButton(book.ID) -->
+				<!-- } else { -->
+				<!-- 	@DeleteButton(book.ID) -->
+				<!-- } -->
 			</td>
 		</tr>
 	}
