--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -2,23 +2,32 @@ package web
 
 templ Base() {
 	<!DOCTYPE html>
-	<html lang="en" class="h-screen" hx-get="/" hx-trigger="load">
+	<html
+		lang="en"
+		data-theme="cupcake"
+		class="bg-base-200"
+		hx-get="/"
+		hx-trigger="load"
+	>
 		<head>
-			<meta charset="utf-8"/>
+			<meta charset="UTF-8"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<title>Book It</title>
-			<link href="assets/css/output.css" rel="stylesheet"/>
-			<script src="assets/js/htmx.min.js"></script>
+			//<link href="assets/css/output.css" rel="stylesheet"/>
+			//<script src="assets/js/htmx.min.js"></script>
 			// tailwind flowbite
+			<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css"/>
+			<script src="https://cdn.tailwindcss.com"></script>
 			<script src="https://unpkg.com/htmx.org@1.7.0"></script>
-			<script src="https://unpkg.com/hyperscript.org@0.9.13"></script>
-			<link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet"/>
+			<!-- <script src="https://unpkg.com/hyperscript.org@0.9.13"></script> -->
+			<!-- <link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet"/> -->
+			// daisyUi
 		</head>
-		<body class="bg-gray-100">
+		<body>
 			// tailwind flowbite 
-			<main class="max-w-6xl mx-auto p-4">
-				<div class="flex flex-col"></div>
+			<main class="base max-w-screen gap-2 px-6 pt-5">
 				<div id="navbar-container" hx-get="/navbar" hx-trigger="load" hx-swap="outerHTML"></div>
-				<div id="content-container" class="pt-12">
+				<div id="content-container" class="bg-base-200">
 					{ children... }
 				</div>
 			</main>
