--- a/cmd/web/navbar.templ
+++ b/cmd/web/navbar.templ
@@ -3,45 +3,122 @@ package web
 import "github.com/FilipBudzynski/book_it/pkg/models"
 
 templ Navbar(user *models.User) {
-	<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
-		<div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-			<a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-				<img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo"/>
-				<span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-			</a>
-			<div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-				if user != nil {
-					<!-- <button  -->
-					<!--                hx-post="/auth/logout?provider=google" -->
-					<!--                type="button" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Logout</button> -->
-					@SignOutButton()
-				} else {
-					<!-- <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get started</button> -->
-					@SignInButton()
-				}
-				<button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
-					<span class="sr-only">Open main menu</span>
-					<svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-						<path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"></path>
+	<div class="navbar bg-base-100 mb-6 shadow-md rounded-box">
+		<div class="navbar-start">
+			<div class="dropdown">
+				<div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						class="h-5 w-5"
+						fill="none"
+						viewBox="0 0 24 24"
+						stroke="currentColor"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M4 6h16M4 12h8m-8 6h16"
+						></path>
 					</svg>
-				</button>
-			</div>
-			<div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
-				<ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+				</div>
+				<ul
+					tabindex="0"
+					class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+				>
 					<li>
-						<a href="/books" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
+						<a href="/">Home</a>
 					</li>
 					<li>
-						<a href="/user-books" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">My Books</a>
+						<a href="/books">Search</a>
 					</li>
 					<li>
-						<a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
+						<a>Parent</a>
+						<ul class="p-2">
+							<li><a>Submenu 1</a></li>
+							<li><a>Submenu 2</a></li>
+						</ul>
 					</li>
 					<li>
-						<a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+						<a href="/user-books">My Books</a>
 					</li>
 				</ul>
 			</div>
+			<a class="btn btn-ghost text-xl">book it</a>
 		</div>
-	</nav>
+		<div class="navbar-center hidden lg:flex">
+			<ul class="menu menu-horizontal px-1">
+				<li>
+					<a href="/">Home</a>
+				</li>
+				<li>
+					<a href="/books">Search</a>
+				</li>
+				<li>
+					<a href="/user-books">My Books</a>
+				</li>
+				<li>
+					<details>
+						<summary>Parent</summary>
+						<ul class="p-2">
+							<li><a>Submenu 1</a></li>
+							<li><a>Submenu 2</a></li>
+						</ul>
+					</details>
+				</li>
+				<li><a>Item 3</a></li>
+			</ul>
+		</div>
+		<div class="navbar-end">
+			<label class="flex cursor-pointer pr-3">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="20"
+					height="20"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+					stroke-linecap="round"
+					stroke-linejoin="round"
+				>
+					<circle cx="12" cy="12" r="5"></circle>
+					<path
+						d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"
+					></path>
+				</svg>
+				<input type="checkbox" value="dark" class="mx-2 toggle theme-controller"/>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="20"
+					height="20"
+					viewBox="0 0 24 24"
+					fill="none"
+					stroke="currentColor"
+					stroke-width="2"
+					stroke-linecap="round"
+					stroke-linejoin="round"
+				>
+					<path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
+				</svg>
+			</label>
+			if user != nil {
+				<a
+					href="/auth/logout?provider=google"
+					class="btn"
+				>
+					Sign Out
+				</a>
+			} else {
+				<a
+					href="/auth/?provider=google"
+					class="btn"
+				>
+					<img class="w-6 h-6" src="https://www.svgrepo.com/show/475656/google-color.svg" loading="lazy" alt="google logo"/>
+					<span>Sign In with Google</span>
+				</a>
+			}
+			<!-- <a class="btn">Button</a> -->
+		</div>
+	</div>
 }
