user books rework

--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -17,7 +17,7 @@ templ Base() {
 			//<script src="assets/js/htmx.min.js"></script>
 			// tailwind flowbite
 			<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css"/>
-			<script src="https://cdn.tailwindcss.com"></script>
+			<script src="https://cdn.tailwindcss.com?plugins=typography"></script>
 			<script src="https://unpkg.com/htmx.org@1.7.0"></script>
 			<!-- <script src="https://unpkg.com/hyperscript.org@0.9.13"></script> -->
 			<!-- <link href="https://unpkg.com/flowbite@1.6.5/dist/flowbite.min.css" rel="stylesheet"/> -->
