--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -9,54 +9,14 @@ import (
 
 templ BooksSearch() {
 	@web.Base() {
-		<!-- <div class="justify-items-center" hx-target="content-container" hx-swap="innerHTML"> -->
-		<!-- 	<form class="pb-3 max-w-md mx-auto" hx-post="/books" method="POST" hx-target="#books-container"> -->
-		<!-- 		<label -->
-		<!-- 			for="default-search" -->
-		<!-- 			class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white" -->
-		<!-- 		>Search</label> -->
-		<!-- 		<div class="relative"> -->
-		<!-- 			<div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"> -->
-		<!-- 				<svg -->
-		<!-- 					class="w-4 h-4 text-gray-500 dark:text-gray-400" -->
-		<!-- 					aria-hidden="true" -->
-		<!-- 					xmlns="http://www.w3.org/2000/svg" -->
-		<!-- 					fill="none" -->
-		<!-- 					viewBox="0 0 20 20" -->
-		<!-- 				> -->
-		<!-- 					<path -->
-		<!-- 						stroke="currentColor" -->
-		<!-- 						stroke-linecap="round" -->
-		<!-- 						stroke-linejoin="round" -->
-		<!-- 						stroke-width="2" -->
-		<!-- 						d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z" -->
-		<!-- 					></path> -->
-		<!-- 				</svg> -->
-		<!-- 			</div> -->
-		<!-- 			<input -->
-		<!-- 				type="search" -->
-		<!-- 				id="book-title" -->
-		<!-- 				name="book-title" -->
-		<!-- 				class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-green-500 focus:border-green-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-green-500 dark:focus:border-green-500" -->
-		<!-- 				placeholder="Search Mockups, Logos..." -->
-		<!-- 				required -->
-		<!-- 			/> -->
-		<!-- 			<button -->
-		<!-- 				type="submit" -->
-		<!-- 				class="text-white absolute end-2.5 bottom-2.5 bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" -->
-		<!-- 			>Search</button> -->
-		<!-- 		</div> -->
-		<!-- 	</form> -->
-		<!-- 	@BooksTable() -->
-		<!-- </div> -->
-		<div class="flex w-full flex-col">
+		<div class="flex flex-col items-center mx-10 md:mx-20">
 			<form
 				hx-post="/books"
 				method="POST"
 				hx-target="#books-container"
-				class="mb-4"
+				class="w-3/5 mx-12 mb-4"
 			>
-				<label class="mx-36 input input-bordered input-sm flex items-center gap-2">
+				<label class="input input-sm flex items-center">
 					<input
 						type="search"
 						id="book-title"
@@ -89,7 +49,7 @@ templ BooksSearch() {
 
 templ BooksPost(books []schemas.Book, userBooks []models.UserBook) {
 	for _, book := range books {
-		<tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 hover:bg-gray-50 dark:hover:bg-gray-600">
+		<tr>
 			<td class="w-1/12 px-3 py-2">
 				<img src={ book.ImageLink } alt="img" class="w-auto h-24 object-cover shadow-sm"/>
 			</td>
@@ -114,10 +74,15 @@ templ BooksPost(books []schemas.Book, userBooks []models.UserBook) {
 }
 
 templ BooksTable() {
-	<div class="w-11/12 overflow-x-auto shadow-md sm:rounded-lg">
-		<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-			<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"></thead>
-			<tbody id="books-container"></tbody>
-		</table>
-	</div>
+	<!-- <div class="w-11/12 overflow-x-auto shadow-md sm:rounded-lg"> -->
+	<!-- 	<table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"> -->
+	<!-- 		<thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400"></thead> -->
+	<!-- 		<tbody id="books-container"></tbody> -->
+	<!-- 	</table> -->
+	<!-- </div> -->
+	<table class="bg-base-100 mx-10 table table-zebra table-lg">
+		<thead></thead>
+		<tbody id="books-container"></tbody>
+		<tfoot></tfoot>
+	</table>
 }
