--- a/cmd/web/navbar.templ
+++ b/cmd/web/navbar.templ
@@ -58,9 +58,9 @@ templ Navbar(user *models.User) {
 					<a href="/user-books">My Books</a>
 				</li>
 				<li>
-					<details>
-						<summary>Parent</summary>
-						<ul class="p-2">
+					<details class="z-50">
+						<summary class="z-20">Parent</summary>
+						<ul class="p-2 w-max">
 							<li><a>Submenu 1</a></li>
 							<li><a>Submenu 2</a></li>
 						</ul>
@@ -87,7 +87,7 @@ templ Navbar(user *models.User) {
 						d="M12 1v2M12 21v2M4.2 4.2l1.4 1.4M18.4 18.4l1.4 1.4M1 12h2M21 12h2M4.2 19.8l1.4-1.4M18.4 5.6l1.4-1.4"
 					></path>
 				</svg>
-				<input type="checkbox" value="dark" class="mx-2 toggle theme-controller"/>
+				<input type="checkbox" value="business" class="mx-2 toggle theme-controller"/>
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					width="20"
