--- a/cmd/web/base.templ
+++ b/cmd/web/base.templ
@@ -29,6 +29,7 @@ templ Base() {
 				<div id="navbar-container" hx-get="/navbar" hx-trigger="load" hx-swap="outerHTML"></div>
 				<div id="content-container" class="bg-base-200">
 					{ children... }
+					@Loading()
 				</div>
 			</main>
 		</body>
