--- a/cmd/web/books/search.templ
+++ b/cmd/web/books/search.templ
@@ -3,6 +3,7 @@ package web_books
 import (
 	"github.com/FilipBudzynski/book_it/pkg/models"
 	"github.com/FilipBudzynski/book_it/utils"
+	"github.com/FilipBudzynski/book_it/cmd/web"
 )
 
 templ BooksSearch() {
@@ -11,6 +12,7 @@ templ BooksSearch() {
 			hx-post="/books"
 			method="POST"
 			hx-target="#books-container"
+			hx-indicator="#loading-spinner"
 			class="w-3/5 mx-12 mb-4"
 		>
 			<label class="input input-sm flex items-center">
@@ -39,6 +41,7 @@ templ BooksSearch() {
 				</button>
 			</label>
 		</form>
+		@web.Loading()
 		@BooksTable()
 	</div>
 }
@@ -47,7 +50,13 @@ templ BooksPost(books []*models.Book, userBooks []*models.UserBook) {
 	for _, book := range books {
 		<tr>
 			<td class="w-1/12 px-3 py-2">
-				<img src={ book.ImageLink } alt="img" class="w-auto h-24 object-cover shadow-sm"/>
+				<div class="flex items-center gap-3">
+					<div class="avatar">
+						<div class="mask mask-squircle h-12 w-12">
+							<img src={ book.ImageLink } alt="img"/>
+						</div>
+					</div>
+				</div>
 			</td>
 			<td class="w-max px-3 py-2">
 				<div class="flex flex-col">
